--- a/files/homeassistant/hacs_version/individual_printer_image_p1s.yaml
+++ b/files/homeassistant/hacs_version/individual_printer_image_p1s.yaml
@@ -1,6 +1,4 @@
 type: picture-elements
-view_layout:
-  column: 1
 elements:
   - type: conditional
     conditions:
@@ -32,9 +30,7 @@ elements:
           - type: conditional
             conditions:
               - entity: image.{HA_PRINTER_DEVICE_NAME}_cover_image
-                state_not: 
-                  - "unavailable"
-                  - "unknown"
+                state_not: unavailable
             elements:
               - type: custom:hui-element
                 card_type: picture-entity
