--- a/files/homeassistant/hacs_version/individual_ams.yaml
+++ b/files/homeassistant/hacs_version/individual_ams.yaml
@@ -1,7 +1,28 @@
 type: picture-elements
-view_layout:
-  column: 1
 elements:
+  - type: conditional
+    conditions:
+      - condition: state
+        state_not: unavailable
+        entity: sensor.{HA_AMS_DEVICE_NAME}_id
+      - condition: state
+        state_not: unknown
+        entity: sensor.{HA_AMS_DEVICE_NAME}_id
+    elements:
+      - type: state-label
+        entity: sensor.{HA_AMS_DEVICE_NAME}_id
+        tap_action:
+          action: none
+        style:
+          top: 77%
+          left: 9.6%
+          text-align: center
+          font-size: 0.8em
+          background-color: rgba(0,0,0,0)
+          box-shadow: 0 0 3px 3px rgba(0, 0, 0, 0)
+          border-radius: 10px
+          pointer-events: none
+          color: '#FFFFFF'
   - type: custom:config-template-card
     entities:
       - sensor.{HA_AMS_DEVICE_NAME}_tray_1
