--- a/files/homeassistant/hacs_version/individual_printer_image_a1mini.yaml
+++ b/files/homeassistant/hacs_version/individual_printer_image_a1mini.yaml
@@ -1,6 +1,4 @@
 type: picture-elements
-view_layout:
-  column: 1
 elements:
   - type: conditional
     conditions:
@@ -32,9 +30,7 @@ elements:
           - type: conditional
             conditions:
               - entity: image.{HA_PRINTER_DEVICE_NAME}_cover_image
-                state_not: 
-                  - "unavailable"
-                  - "unknown"
+                state_not: unavailable
             elements:
               - type: custom:hui-element
                 card_type: picture-entity
@@ -73,11 +69,11 @@ elements:
           color: rgba(0,0,0,0)
 card_mod:
   style: |
-      ha-card {
-        box-shadow: none !important;
-        background: none !important;
-        border: none !important;
-      }
+    ha-card {
+      background: none !important;
+      border: none !important; 
+      box-shadow: none !important;
+    }
 image: /local/media/bambuprinter/a1mini_lighton.png
 entity: light.{HA_PRINTER_DEVICE_NAME}_chamber_light
 state_image:
