--- a/files/homeassistant/nodered_version/individual_printer_image_a1.yaml
+++ b/files/homeassistant/nodered_version/individual_printer_image_a1.yaml
@@ -1,6 +1,4 @@
 type: picture-elements
-view_layout:
-  column: 1
 elements:
   - type: conditional
     conditions:
@@ -25,21 +23,26 @@ elements:
       - type: conditional
         conditions:
           - entity: sensor.{HA_PRINTER_DEVICE_NAME}_print_status
-            state: 
-            - RUNNING
-            - PAUSE
+            state:
+              - RUNNING
+              - PAUSE
         elements:
-          - type: custom:hui-element
-            card_type: picture-entity
-            show_name: false
-            show_state: false
-            entity: image.{HA_PRINTER_DEVICE_NAME}_print_preview
-            style:
-              top: 61.5%
-              left: 47%
-              transform: translate(-45%, -40%) scale(75%, 75%)
-              '--ha-card-border-width': 0px
-              '--ha-card-background': none
+          - type: conditional
+            conditions:
+              - entity: image.{HA_PRINTER_DEVICE_NAME}_print_preview
+                state_not: unavailable
+            elements:
+              - type: custom:hui-element
+                card_type: picture-entity
+                show_name: false
+                show_state: false
+                entity: image.{HA_PRINTER_DEVICE_NAME}_print_preview
+                style:
+                  top: 61.5%
+                  left: 47%
+                  transform: translate(-45%, -40%) scale(75%, 75%)
+                  '--ha-card-border-width': 0px
+                  '--ha-card-background': none
           - entity: sensor.{HA_PRINTER_DEVICE_NAME}_print_progress
             type: state-badge
             tap_action:
@@ -67,9 +70,9 @@ elements:
 card_mod:
   style: |
     ha-card {
-      box-shadow: none !important;
       background: none !important;
-      border: none !important;
+      border: none !important; 
+      box-shadow: none !important;
     }
 image: /local/media/bambuprinter/a1_lightoff.png
 entity: light.{HA_PRINTER_DEVICE_NAME}_chamber_light
