--- a/files/homeassistant/nodered_version/individual_printer_image_p1p.yaml
+++ b/files/homeassistant/nodered_version/individual_printer_image_p1p.yaml
@@ -1,6 +1,4 @@
 type: picture-elements
-view_layout:
-  column: 1
 elements:
   - type: conditional
     conditions:
@@ -29,17 +27,22 @@ elements:
             - RUNNING
             - PAUSE
         elements:
-          - type: custom:hui-element
-            card_type: picture-entity
-            show_name: false
-            show_state: false
-            entity: image.{HA_PRINTER_DEVICE_NAME}_print_preview
-            style:
-              top: 50%
-              left: 50%
-              transform: translate(-45%, -40%) scale(75%, 75%)
-              '--ha-card-border-width': 0px
-              '--ha-card-background': none
+          - type: conditional
+            conditions:
+              - entity: image.{HA_PRINTER_DEVICE_NAME}_print_preview
+                state_not: unavailable
+            elements:
+              - type: custom:hui-element
+                card_type: picture-entity
+                show_name: false
+                show_state: false
+                entity: image.{HA_PRINTER_DEVICE_NAME}_print_preview
+                style:
+                  top: 50%
+                  left: 50%
+                  transform: translate(-45%, -40%) scale(75%, 75%)
+                  '--ha-card-border-width': 0px
+                  '--ha-card-background': none
           - entity: sensor.{HA_PRINTER_DEVICE_NAME}_print_progress
             type: state-badge
             tap_action:
