--- a/files/homeassistant/blueprints/nodered/bambu_nr_notify_print_state.yaml
+++ b/files/homeassistant/blueprints/nodered/bambu_nr_notify_print_state.yaml
@@ -25,7 +25,7 @@ trigger:
     to: IDLE
     from: RUNNING
 action:
-  - alias: "Run the customs actions"
+  - alias: "Run the custom actions"
     choose: []
     default: !input custom_actions
   - alias: Send notification to each mobile device
