Fixed custom blueprint actions for notify

--- a/files/homeassistant/blueprints/nodered/bambu_nr_notify_print_error.yaml
+++ b/files/homeassistant/blueprints/nodered/bambu_nr_notify_print_error.yaml
@@ -190,5 +190,6 @@ blueprint:
     custom_actions:
       name: Custom Actions
       description: "Custom Actions to run. Please provide proper structure, devices, and service data as applicable"
+      default: []
       selector:
         action: {}
