--- a/files/homeassistant/blueprints/nodered/bambu_nr_notify_print_state.yaml
+++ b/files/homeassistant/blueprints/nodered/bambu_nr_notify_print_state.yaml
@@ -181,5 +181,6 @@ blueprint:
     custom_actions:
       name: Custom Actions
       description: "Custom Actions to run. Please provide proper structure, devices, and service data as applicable"
+      default: []
       selector:
         action: {}
